# example/gen/openapi.yaml
@@ -227,6 +227,18 @@ components:
                 - code
                 - message
             type: object
+        GetHealthRequest:
+            additionalProperties: false
+            properties: {}
+            type: object
+        GetHealthResponse:
+            additionalProperties: false
+            properties:
+                status:
+                    type: string
+            required:
+                - status
+            type: object
         GetUserRequest:
             additionalProperties: false
             properties:
@@ -396,6 +408,20 @@ info:
     version: 1.0.0
 openapi: 3.1.0
 paths:
+    /v1/admin/health:
+        get:
+            operationId: getHealth
+            responses:
+                "200":
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetHealthResponse'
+                    description: Current health.
+            summary: Get health
+            tags:
+                - admin
+            x-ogen-operation-group: Admin
     /v1/avatar:
         post:
             operationId: uploadAvatar
